# rusty-dice

./: Cargo.toml
src/: ast.rs  dice.l  dice.y  evaluator.rs  lib.rs
