[package]
name = "rusty-dice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = "0.13.4"
lrlex = "0.13.4"
lrpar = "0.13.4"
thiserror = "1.0.57"

[build-dependencies]
cfgrammar = "0.13.4"
lrlex = "0.13.4"
lrpar = "0.13.4"
